// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Snapshot <Maps/> pageType.MAIN 1`] = `
<section
  className="map cities__map"
>
  <div
    id="map"
    style={
      Object {
        "height": "100%",
      }
    }
  />
</section>
`;

exports[`Render Snapshot <Maps/> pageType.OFFER 1`] = `
<section
  className="map property__map"
>
  <div
    id="map"
    style={
      Object {
        "height": "100%",
      }
    }
  />
</section>
`;
